--- a/skin/main.html
+++ b/skin/main.html
@@ -26,7 +26,7 @@
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="/skin/js/skin.js"></script>
 </head>
-<body>
+<body class="white">
   <div class="wrap main">
     <header class="header">
       <div class="fix-box">
@@ -81,15 +81,5 @@
       </div>
     </main>
   </div>
-  <script>
-    $(window).scroll(function() {
-      var st = $(window).scrollTop();
-      if(st >= 100) {
-        $('body').addClass('fix-tit');
-      } else {
-        $('body').removeClass('fix-tit');
-      }
-    });
-  </script>
 </body>
 </html>
