--- a/skin/main.html
+++ b/skin/main.html
@@ -26,8 +26,8 @@
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="/skin/js/skin.js"></script>
 </head>
-<body class="white">
-  <div class="wrap main">
+<body class="main">
+  <div class="wrap">
     <header class="header">
       <div class="fix-box">
         <a href="" class="btn-back"><span></span></a>
